--- a/Code.ipynb
+++ b/Code.ipynb
@@ -23,7 +23,7 @@
     "U(x_L,t) = U_B(x_L,t), \\quad U(x_R,t) = U_B(x_R,t), \\quad U(x,0) = U_0(x)\n",
     "$$\n",
     "\n",
-    "where $$((x,t)$$ lies in $$[x_L, x_R] X [0, T]$$).\n",
+    "where $$(x,t)$$ lies in $$[x_L, x_R] X [0, T]$$.\n",
     "\n",
     "In the example provided:\n",
     "\n",
